// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VButton should mount component and match snapshot 1`] = `
<button class="v-button grey lighten-1">
  <div class="v-button__content">
  </div>
</button>
`;

exports[`VButton should set color and match snapshot 1`] = `
<button class="v-button red darken-3">
  <div class="v-button__content">
  </div>
</button>
`;

exports[`VButton should set disabled and match snapshot 1`] = `
<button class="v-button v-button--disabled">
  <div class="v-button__content">
  </div>
</button>
`;

exports[`VButton should set label and match snapshot 1`] = `
<button class="v-button grey lighten-1">
  <div class="v-button__content">
    <span class="v-button__label">
      test
    </span>
  </div>
</button>
`;
